Alina Shestakova, Stage 1 (#12)
* Init

* Add deleted file

* Fixed codeclimate

* Fix comparing memory segments

* Delete unused imports

* Deleted empty lines

Co-authored-by: Artyom Drozdov <artyomcool2@gmail.com>